# Hangman

./: .directory  .gitignore  Game.cpp  Game.h  Player.cpp  Player.h  README.md  server  server.cpp  serwer  serwer.cpp  words
Hangman/: CMakeLists.txt  Hangman.pro  Hangman.pro.user.3d795ad  Hangman.pro.user.d84ec10  hangman.cpp  hangman.h  hangman.ui  main.cpp
Serwer/: Game.cpp  Player.cpp  Player.h  server.cpp  words
build-Hangman-Desktop-Debug/: Hangman  Makefile  moc_hangman.cpp  moc_mainwindow.cpp  ui_hangman.h
